# FairForge-arena

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  baseline_inference.py  baseline_scores.json  client.py  cloudbuild.yaml  final_check.py  fix.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_audit_test.py  run_test.py  start.sh  temp.js  vercel.json
.github/workflows/: ci.yml  deploy.yml  google-cloud-deploy.yml
app/: adversary.py  config.py  env.py  grader.py  main.py  memory.py  models.py  policies.py  redteamer.py  tasks.py  trainer.py  ui.py
app/static/: index.html
backend/: main.py
data/easy/: scenarios.json
data/expert/: scenarios.json
data/hard/: scenarios.json
data/medium/: scenarios.json
frontend/: index.html
tests/: final_audit.py  test_adversary.py  test_env.py  test_graders.py  test_models.py  test_redteamer.py  test_tasks.py
