[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "safetyguard-x"
version = "1.0.0"
description = "Adversarial AI Safety Stress Testing Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "pydantic>=2.4.2",
    "python-multipart==0.0.12",
    "openenv-core>=0.2.0",
    "pyyaml>=6.0",
    "litellm>=1.30.0",
    "stable-baselines3>=2.3.0",
    "huggingface_hub>=0.20.0",
    "datasets>=2.18.0",
    "Shimmy>=2.0.0",
    "gymnasium>=0.28.1",
    "plotly>=5.18.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "safetyguard-x"
version = "1.0.0"
entry_point = "server.app:app"